# ADJUTORIX

./: .gitignore  .npmrc  FINALITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.adjutorix/: actions.json
.adjutorix-audit/20260402-160331/: NEXT_100_HEALTHY.md
.adjutorix-audit/20260402-162022-runtime-authority/: runtime-authority-hotspots.txt
.adjutorix-audit/20260402-201922-truthful-surface/: core-surface.txt  health-callers.txt  next-drift.txt  non-exposed-callers.txt  rpc-methods.txt  summary.txt
.github/workflows/: README.md  adjutorix-finality.yml  adjutorix-v020-release-finality.yml  adjutorix-verify.yml
configs/adjutorix/: constitution.json
configs/ci/: check.sh  github-actions.yml  guard_apply_gate_bypass.sh  guard_contract_drift.sh  guard_generated_artifacts.sh  guard_interaction_contract.sh  guard_ipc_channel_registry.sh  guard_ipc_channel_registry_selftest.sh  guard_no_direct_write.sh  guard_renderer_authority.sh  guard_renderer_release_surface.sh  guard_replay_determinism.sh  guard_scheduler_bypass.sh  guard_v1_finality.sh  smoke.sh  (+8 more)
docs/: ARCHITECTURE.md  LEDGER_AND_REPLAY.md  PATCH_GATE.md  STATE_MACHINE.md  WIRE_PROTOCOL.md
scripts/: adjutorix-constitution-check.mjs  bootstrap.sh  build.sh  check.sh  clean.sh  dev.sh  doctor.sh  node-ts-extension-loader.mjs  package-macos.sh  smoke.sh  verify.sh
tests/fixtures/sample_repo_python/: README.md  pyproject.toml
tests/fixtures/sample_repo_python/src/sample_repo_python/: __init__.py  core.py
tests/fixtures/sample_repo_python/tests/: test_core.py
(+168 files in other folders)
