[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-repo-python"
version = "1.0.0"
description = "Python repository fixture for ADJUTORIX integration tests"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
{ name = "ADJUTORIX Fixture" }
]

[tool.pytest.ini_options]
testpaths = ["tests"]
